# ThunderClaude

./: README.md  index.html  latest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  Micro-SaaS Research 2025-2026.md  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dom-blox/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src-tauri/dom-blox/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/dom-blox/src-tauri/src/: export.rs  main.rs
src-tauri/src/: claude.rs  lib.rs  main.rs  search.rs
src/contexts/: ChatContext.tsx
src/hooks/: useAppContext.ts  useClaude.ts  useCommander.ts  useKeyboardShortcuts.ts  useMention.ts  useResearcher.ts  useStreamHandler.ts  useTabs.ts
src/lib/: artifacts.ts  branching.test.ts  branching.ts  claude-protocol.test.ts  claude-protocol.ts  commander.test.ts  commander.ts  concurrency.ts  constants.ts  cost-tracker.ts  export.test.ts  export.ts  failover.test.ts  failover.ts  file-utils.ts  goals.ts  highlighter.ts  json-utils.ts  loop-detection.test.ts  loop-detection.ts  mcp.ts  memory-search.test.ts  memory-search.ts  memory.test.ts  memory.ts  messages.ts  mode-triggers.test.ts  mode-triggers.ts  models.ts  one-shot.ts  project-context.ts  projects.ts  quality-gate.ts  research-library.ts  researcher.test.ts  researcher.ts  session-search.test.ts  session-search.ts  sessions.test.ts  sessions.ts  (+9 more)
src/stores/: sceneStore.ts
src/types/: scene.ts
(+36 files in other folders)
